<resources>
    <string name="ajout_produit">Ajout Produit</string>
    <string name="info">Information</string>
    <string name="app_name0">Inventaire</string>
    <string name="app_name">Inventaire</string>
    <string name="app_name1">Information</string>
    <string name="app_name2">Add Products</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="nm_produit">Entrer Nom Produit</string>
    <string name="prix_prodduit">Montant prix</string>
    <string name="button_send">Ajouter</string>
    <string name="button_del">Del</string>
    <string name="nb_produit">Quantite produit</string>
    <string name="nom_produit">Nom Produit</string>
</resources>
