<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.inventaire2.inventaire2.View.MainActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

</menu>
